[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/assets/images/game_jam_off_2021_bullet (3).png" type="Texture" id=1]
[ext_resource path="res://src/scripts/bullet.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.2, 4.2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.694915, 1 )
colors = PoolColorArray( 0.0745098, 0.117647, 0.152941, 1, 0.165237, 0.634236, 0.863281, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
max_value = 5.0
_data = [ Vector2( 0, 2.34727 ), 0.0, 0.0, 0, 0, Vector2( 0.987805, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
direction = Vector3( -270, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.0
scale = 3.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[node name="Bullet" type="RigidBody2D"]
collision_mask = 0
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0552254, 8.00011 )
texture = ExtResource( 1 )
offset = Vector2( 0, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.99993 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.0329399, -1.99792 )
shape = SubResource( 3 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
position = Vector2( -5.21262, -1.82351 )
speed_scale = 2.0
local_coords = false
process_material = SubResource( 8 )

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
